smallscreen_62em.css
/*62em:992px */
@media screen and (max-width: 62em) {

@font-face {
  font-family: Roboto;
  src: url("Roboto-Light.ttf");
}

* {
  font-family:Roboto;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  height: 100%;
}

.page_container {
  display: flex;
  flex-flow: row wrap;
  width: 100vw;
  height: 100vh;
}

.aside_container {
  display: flex;
  flex-flow: row wrap; 
  flex-shrink: 1;
  background-color: rgb(254, 202, 7);
  font-size:1em;
  min-width:200px;
  width:100%;
  align-items:stretch;
}

#div_profilepic {
  text-align: center;
  vertical-align:middle;
  margin:10px;
  justify-self:flex-start;
  width: 100%;
}

img#profilepic {
  height:100px;
  width:100px;
  vertical-align:middle;
  border-radius: 50%;
}

#section_title1 {
  margin-top:10px;
  background-color: rgb(64, 64, 64);
  color: rgb(254, 202, 7);
  text-align: center;
  width: 100%;
  padding: 5px 0;
  font-weight:1000;
  vertical-align:middle;
  max-height:32px;
}

#section_title2 {
  margin-top:10px;
  background-color: rgb(64, 64, 64);
  color: rgb(254, 202, 7);
  text-align: center;
  width: 100%;
  padding: 5px 0;
  font-weight:1000;
  vertical-align:middle;
  max-height:32px;
}

#section_title3 {
  margin-top:10px;
  background-color: rgb(64, 64, 64);
  color: rgb(254, 202, 7);
  text-align: center;
  padding: 5px 0;
  font-weight:1000;
  vertical-align:middle;
  max-height:32px;
}

#section_title1 h3 {
  font-size: 22px;
  margin: 0px;
  line-height:100%;
}

#section_title2 h3 {
  font-size: 22px;
  margin: 0px;
  line-height:100%;
}

#section_title3 h3 {
  font-size: 22px;
  margin: 0px;
  line-height:100%;
}

#contact_info_div {
  display: flex;
  flex-flow:column nowrap;
  padding: 5px;
  width:100%;
  flex-shrink:0;
}

.contact_info {
  display: flex;
  flex-flow: row wrap;
  align-content: space-between;
  font-weight: 1000;
  padding:10px;
  font-style: normal;
  max-height: 150px;
  min-width: 100px;
  flex-shrink: 1;
}

address div.contact_info p {
  margin:5px;
  margin-right: 20px;
}

div.contact_info p a, div.contact_info p a:visited, div.contact_info p a:hover, div.contact_info p a:active {
  color: #000000;
  text-decoration: none;
}

.profile_description {
  padding: 10px;
  text-align: justify;
  min-width: 100px;
  flex-shrink: 1;
  flex-wrap: wrap;
}

.aside_container footer {
  align-self: flex-end;
  width:100%;
  padding-bottom: 20px;
}

.leisure {
  padding: 0 10px;
  padding-top: 20px;
  display: flex;
  flex-direction: row;
  align-items: center;
  width:100%;
  justify-content: space-around;
  text-align: center;
}

.leisure_icon {
  height:50px;
  width:50px;
  border:solid rgb(64, 64, 64);
  border-radius: 50%;
}

.helper {
    height: 100%;
    display: inline-block;
    vertical-align: middle;
}

.leisure_icon img {
  height:35px;
  width:35px;
  vertical-align: middle;
}

.filter-grey {
  filter: invert(24%) sepia(7%) saturate(10%) hue-rotate(63deg) brightness(91%) contrast(90%);
}

.filter-yellow {
  filter: invert(77%) sepia(48%) saturate(924%) hue-rotate(355deg) brightness(102%) contrast(99%);
}

.main_container {
  display:flex;
  flex-flow: column nowrap;
  background-color: white;
  padding: 10px 15px;
}

.main_section_container {
  margin:0px;
  margin-bottom:30px;
}

header {
  margin-bottom: 70px;
}

header h1 {
  margin-top:70px;
  margin-bottom:0px;
  font-size: 2.5em;
}

header h4 {
  margin-top:0;
  font-size: 2em;
}

#Guillaume {
  color: rgb(254, 202, 7);
}

#dev_underline {
  border-bottom: solid 1px rgb(254, 202, 7);
}

.main_section_header {
  margin-top:10px;
  padding-bottom:5px;
  border-bottom: solid 1px rgb(254, 202, 7);
}

h4 img {
  height:18px;
  width:18px;
  margin-right:10px;
}

div.main_section_header h4 {
  margin:0;
  font-size:1.8em;
  font-weight:1000;
}

div.main_section_unit {
  display:flex;
  flex-direction:row;
  padding-top:30px;
}

.main_section_unit_dates {
  font-size: 0.8em;
  font-weight: 700;
  max-width:120px;
  padding-right:20px;
  word-wrap: break-word;
  flex-shrink:1;
}

div.main_section_unit_content {
  padding:0;
}

div.main_section_unit_dates p{
  margin:0;
}

div.main_section_unit_dates p img {
  height:5px;
  width:5px;
  margin-right:10px;
}

div.main_section_unit_dates p:nth-child(1) img {
  margin-right:15px;
}

div.main_section_unit_dates p:nth-child(2) {
  margin-left:22px;
}

.main_container > section:nth-child(3) > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) p img, 
.main_container > section:nth-child(3) > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) p img {
  height:10px;
  width:10px;
  margin-right:11px;
}


div.main_section_unit_content h6 {
  margin:0;
  margin-bottom: 5px;
  font-size: 1.2em;
}

div.main_section_unit_content p {
  margin-top:5px;
  margin-bottom:5px;
  font-size: 1em;
}

div.main_section_unit_content ul {
  margin:0px;
  text-align:left;
  padding-left:5px;
}

div.main_section_unit_content ul li {
  font-size: 1em;
  text-align:left;
}

div.main_section_unit_content h5 {
  margin:0;
  margin-bottom:5px;
  font-size: 1.4em;
}

div.main_section_container div.main_section_unit div.main_section_unit_content {
  padding-bottom: 0px;
}

.nopaddingtop {
  padding-top: 15px;
}


div.main_section_unit_reco_div {
  display: flex;
  flex-direction: row wrap;
  justify-content: space-between;
  flex-shrink:1;
  margin-left:30px;
}

#reco_width_shrink {
  padding-top: 20px;
}

div.main_section_unit_reco {
  font-size: 1em;
  font-weight: 700;
  min-width: 120px;
  flex-shrink:0;
  margin-right: 50px;
}

div.main_section_unit_reco p {
  margin-bottom:10px;
}

.smalltext {
  font-weight:100;
}

}

